# uc-online2

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.bat  callback_dispatcher.cpp  dllmain.cpp  dump_handler.cpp  uc_online2.rc  uc_online2.sln  uc_online2.vcxproj
.github/workflows/: pr-build.yml  release.yml
include/: callback_dispatcher.h  dll_loader.h  dump_handler.h  globals.h  platform.h  registfuncs.h  resource.h
include/api/: api_breakpad.h  api_callbacks.h  api_client.h  api_factory.h  api_flat.h  api_gameserver.h  api_interfaces.h  api_interfaces_v.h  api_shutdown.h
include/sdk/: isteamapplist.h  isteamapps.h  isteamclient.h  isteamcontroller.h  isteamfriends.h  isteamgameserver.h  isteamgameserverstats.h  isteamhtmlsurface.h  isteamhttp.h  isteaminput.h  isteaminventory.h  isteammatchmaking.h  isteammusic.h  isteamnetworking.h  isteamnetworkingmessages.h  isteamnetworkingsockets.h  isteamnetworkingutils.h  isteamparentalsettings.h  isteamremoteplay.h  isteamremotestorage.h  isteamscreenshots.h  isteamtimeline.h  isteamugc.h  isteamuser.h  isteamuserstats.h  isteamutils.h  isteamvideo.h  matchmakingtypes.h  steam_api.h  steam_api_common.h  steam_api_internal.h  steam_gameserver.h  steamclientpublic.h  steamhttpenums.h  steamnetworkingtypes.h  steamtypes.h
